tests/parsing/smtlib/v2.6/errors/069_declare-fun_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/069_declare-fun_bad_name_1.smt2", line 2, character 13-14:
2 | (declare-fun _)
                 ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a symbol for the function's name.
